Fix modern Java test infrastructure